Add design and core gems
