# app/models/tour.rb
@@ -17,4 +17,20 @@
 
 class Tour < ApplicationRecord
   belongs_to :user
+
+  def search_quote
+    is_prime =  WhitelistedLocation.within(10, origin: [latitude, longitude]).present?
+
+    if is_prime
+      generator = QuoteGeneratorService.new(user.age)
+      message = $twilio_client.api.account.messages.create(
+        from: '+15005550006',
+        to:   user.phone,
+        body: "Hey there! We have got a perfect quote for your travel insurance starting with just #{generator.quote}"
+      )
+
+      puts ">>>>>>>>>>>>>>>>>>>>>>>>> Quote Rate:  #{generator.quote}"
+      puts "=========== Message send it sid: #{message.sid} ==============="
+    end
+  end
 end
